Fixed margin for blurb on small resolution

--- a/styles.css
+++ b/styles.css
@@ -145,6 +145,8 @@ body {
     }
 }
 
+/* mobile type screens */
+
 @media only screen and (max-width: 60em){ 
     .firstRow, .secondRow, .thirdRow {
         display: block;
@@ -157,6 +159,10 @@ body {
     }
     .callout, .form, .signup {
         width: 100vw;
+    }
+
+    .calloutContainer {
+        margin-top: 20px;
     }
 
     .callout, .signup {
